--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://shreyasuttekar:yQ5giob402YBtRgu@cluster0.nxq25um.mongodb.net/corrupt_jagan
 JWT_SECRET="lA3Jn7KIfUkO#Od6osK@71f^K"
-CORS_ORIGIN=https://660e535a009af8b3d780cc96--corruptjagan.netlify.app/
+CORS_ORIGIN=http://test.mhstc.co.in/
