--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://shreyasuttekar:yQ5giob402YBtRgu@cluster0.nxq25um.mongodb.net/corrupt_jagan
 JWT_SECRET="lA3Jn7KIfUkO#Od6osK@71f^K"
-CORS_ORIGIN=http://aprejectsjagan.com
+CORS_ORIGIN=https://aprejectsjagan.com
